--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.1.0.BUILD-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.mikenimer.apiserver</groupId>
     <artifactId>apiserver</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>ApiServer</name>
-    <url>http://maven.apache.org</url>
-
-
     <modules>
         <module>service-core</module>
         <module>service-cache</module>
         <module>service-images</module>
         <module>service-pdf</module>
-        <module>runner</module>
+
+        <module>runner-basic</module>
     </modules>
+
+
+    <url>http://maven.apache.org</url>
 
 
     <dependencies>
@@ -53,7 +55,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j</artifactId>
-            <version>0.5.0.M7</version>
         </dependency>
 
 
@@ -62,7 +63,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
 
 
         <!-- Common Libraries -->
@@ -98,8 +98,6 @@
         </dependency>
 
 
-
-
         <!-- Swagger
         <dependency>
             <groupId>com.mangofactory</groupId>
@@ -117,11 +115,16 @@
             <version>1.2.0</version>
         </dependency>
         -->
+        <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-jaxrs_2.10</artifactId>
+            <version>1.3.5</version>
+        </dependency>
 
         <dependency>
             <groupId>com.wordnik</groupId>
             <artifactId>swagger-annotations_2.9.1</artifactId>
-            <version>1.2.0</version>
+            <version>1.3.0</version>
         </dependency>
 
     </dependencies>
@@ -149,7 +152,19 @@
             <id>spring-milestones</id>
             <url>http://repo.spring.io/milestone</url>
         </pluginRepository>
+        <pluginRepository>
+            <id>sonatype-snapshot</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
     </pluginRepositories>
+
+
     <build>
         <finalName>apiserver</finalName>
 
@@ -158,6 +173,86 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+
+    <profiles>
+        <profile>
+            <id>swagger-documentation</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.sun.jersey</groupId>
+                    <artifactId>jersey-core</artifactId>
+                    <version>1.13</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.github.kongchen</groupId>
+                        <artifactId>swagger-maven-plugin</artifactId>
+                        <version>2.1</version>
+                        <configuration>
+                            <apiSources>
+                                <apiSource>
+                                    <locations>apiserver.services</locations>
+                                    <apiVersion>v1</apiVersion>
+                                    <basePath>http://localhost</basePath>
+                                    <outputTemplate>
+                                        https://raw.github.com/kongchen/api-doc-template/master/v2.0/markdown.mustache
+                                    </outputTemplate>
+                                    <outputPath>generated/strapdown.html</outputPath>
+                                    <!--swaggerUIDocBasePath>http://localhost/apidocs</swaggerUIDocBasePath-->
+
+                                    <swaggerDirectory>${project.build.directory}/apidocs</swaggerDirectory>
+                                    <useOutputFlatStructure>false</useOutputFlatStructure>
+                                    <!--mustacheFileRoot>${basedir}/src/main/resources/</mustacheFileRoot-->
+                                </apiSource>
+                            </apiSources>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>com.googlecode.maven-download-plugin</groupId>
+                        <artifactId>download-maven-plugin</artifactId>
+                        <version>1.2.0</version>
+                        <executions>
+                            <execution>
+                                <id>download-swaggerui</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>wget</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- todo: find zip to download -->
+                                    <url>https://github.com/wordnik/swagger-ui/tree/master/dist</url>
+                                    <unpack>false</unpack>
+                                    <outputDirectory>${project.build.directory}/apidocs</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+    </profiles>
 </project>
