--- a/runner-basic/pom.xml
+++ b/runner-basic/pom.xml
@@ -1,9 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.1.0.BUILD-SNAPSHOT</version>
+        <groupId>com.mikenimer.apiserver</groupId>
+        <artifactId>apiserver</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +13,7 @@
     <artifactId>apiserver-runner</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>runner</name>
+    <name>runner-basic</name>
     <url>http://maven.apache.org</url>
 
 
@@ -39,11 +40,13 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>com.mikenimer.apiserver</groupId>
             <artifactId>service-pdf</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        -->
 
 
 
@@ -55,8 +58,9 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-shell-remote</artifactId>
+            <artifactId>spring-boot-starter-remote-shell</artifactId>
         </dependency>
+
 
     </dependencies>
 
